--- a/polls/static/styles_thankyou.css
+++ b/polls/static/styles_thankyou.css
@@ -2,39 +2,31 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #eb8787; /* Light gray background for the body */
+  background-color: #eb8787; 
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column; /* Ensure content flows vertically */
   justify-content: center;
   align-items: center;
 }
-
 .container {
-  width: 100%;
-  max-width: 600px;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: #fff; /* White background for the container */
+  background: #fff;
+  padding: 2em;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for the container */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  max-width: 600px;
+  width: 100%;
+  margin: 10px;
 }
 
 h1 {
   text-align: center;
-  color: #e90808;
-  margin-bottom: 20px;
+  color: #333;
+  margin-bottom: 1.5em;
 }
 
 .question-summary {
   margin-bottom: 20px;
-}
-
-h2 {
-  color: #333;
-  margin-top: 20px;
-  margin-bottom: 10px;
 }
 
 ul {
@@ -60,5 +52,5 @@ li:hover {
 
 .most-selected {
   font-weight: bold;
-  color: #9b4caf;
+  color: #ce4949f5;
 }
