--- a/polls/static/styles_thankyou.css
+++ b/polls/static/styles_thankyou.css
@@ -54,3 +54,43 @@ li:hover {
   font-weight: bold;
   color: #ce4949f5;
 }
+
+button {
+  display: block;
+  background-color: #d14848;
+  padding: 7px;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #e24040;
+}
+
+
+
+@media (max-width: 600px) {
+  .container{
+    padding: 1em;
+    margin: 10px;
+  }
+
+  h1{
+    font-size: 1.5em;
+  }
+
+  li{
+    font-size: 0.9em;
+    padding: 0.4em;
+  }
+
+  button {
+    font-size: 1em;
+  }
+
+
+}
