--- a/polls/static/stylesmain.css
+++ b/polls/static/stylesmain.css
@@ -1,106 +1,4 @@
-/*
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #ffffff;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
 
-.container {
-  width: 100%;
-  max-width: 600px;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  margin-top: 20px; 
-
-h1 {
-  text-align: center;
-  color: #6441e2;
-  margin-bottom: 20px;
-}
-
-form {
-  margin-top: 20px; 
-}
-
-fieldset {
-  margin-bottom: 20px;
-  border: 1px solid #ddd;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-legend {
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 10px;
-  display: block;
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-input[type="radio"] {
-  margin-right: 10px;
-}
-
-button[type="submit"] {
-  display: block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #c0a81e;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: #000000;
-  transition: ease-in;
-}
-
-#For Mobile Devices 
-
-@media (max-width: 600px) {
-
-  .container{
-    padding: 10px;
-    margin: 10px;
-  }
-
-  h1 {
-    font-size: 1.5em;
-    margin-bottom: 15px;
-}
-
-legend {
-    font-size: 1.1em;
-    margin-bottom: 8px;
-}
-
-label {
-    margin-bottom: 8px;
-}
-
-button[type="submit"] {
-    width: 100%;
-    padding: 12px;
-}
-
-
-}
- */
  body {
   font-family: Arial, sans-serif;
   background-color: #eb8787;
@@ -164,4 +62,28 @@ button {
 
 button:hover {
   background-color: #e24040;
+}
+
+@media (max-width: 600px) {
+  .container{
+    padding: 1em;
+    margin: 5px;
+  }
+
+  h1{
+    font-size: 1.5em;
+  }
+
+  button {
+    font-size: 1em;
+  }
+
+  label {
+    margin: 0.3em 0;
+  }
+
+  fieldset {
+    padding: 0.5em;
+  }
+
 }
