--- a/polls/templates/polls/thank_you6.html
+++ b/polls/templates/polls/thank_you6.html
@@ -23,8 +23,7 @@
         </ul>
     </div>
     {% endfor %}
-    <button onclick="window.location.href='{% url 'polls:questions3' %}'">Next</button>
+    <button onclick="window.location.href='{% url 'polls:SurveryCompleted' %}'">Next</button>
 </div>
 </body>
 </html>
-
