--- a/polls/templates/polls/thank_you.html
+++ b/polls/templates/polls/thank_you.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Responses is submitted</h1>
+        <h1>Answers for Part 1 submitted</h1>
         {% for response_summary in responses_summary %}
             <div class="question-summary">
                 <h4>{{ response_summary.question.question_text }}</h4>
